@@ -5,6 +5,7 @@ bloonix-agent (0.49) released at 2015-XX-XX
     * An empty host list is now allowed.
     * Fixed bloonix-init-host: the server response is
       now parsed correctly.
+    * Added a default sudoers file for the bloonix agent.
 
 bloonix-agent (0.48) released at 2015-01-27
 
